--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,7 +4,10 @@ project(httest CXX)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(httest TestOrderBook.cpp)
+add_executable(httest
+    TestOrderBook.cpp
+    TestUtil.cpp
+)
 
 target_link_libraries(httest PRIVATE Catch2::Catch2WithMain htlib)
 target_include_directories(httest PUBLIC
