moved binance to common md framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,7 +66,7 @@ add_executable(pricer
     src/md/md_base.cpp
     src/md/gateio.cpp
     src/md/okx.cpp
-    # src/md/binance.cpp
+    src/md/binance.cpp
 )
 target_include_directories(pricer PUBLIC
     ${CMAKE_CURRENT_BINARY_DIR}
