--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "@grpc/grpc-js": "^1.9.0",
     "@grpc/proto-loader": "^0.7.0",
     "protobufjs": "^7.2.0",
-    "google-protobuf": "^3.21.2"
+    "google-protobuf": "^3.21.2",
+    "recharts": "^2.10.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
